@@ -1,5 +1,9 @@
 2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* Grid.cs: Fixed minimum and maximum row/column size handling when the size is star.
+
+2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* ColumnDefinition.cs, RowDefinition.cs: Call InvalidateMeasure on the owner grid when size maximum or minimum changes.
 
 2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>
